@@ -1,0 +1,2 @@
+PASS if we do not crash.
+
